changes that allows the forms to be displayed correctly on mobile devices.

--- a/labgeeks/static/css/main.less
+++ b/labgeeks/static/css/main.less
@@ -29,6 +29,16 @@
     text-decoration: none;
 }
 
+input {
+    border: 1px solid #606163;
+}
+
+input[type="submit"] {
+    background-color: @blueLight;
+    color: @white;
+    padding: 5px;
+}
+
 html, body {
     height: 100%;
 }
